Add generated api by openApi
